# setup_wrf

./: .dockerignore  .gitignore  CMAQ.config.json  Dockerfile  Makefile  README.md  anthropEmis.py  averageFields.py  checkWrfMcipDomainSizes.py  checkWrfoutInBackground.py  config.docker.json  config.json  config.nci.json  configureRunScripts.py  downloadFNLanalyses.py  download_cams_input.py  environment.yml  helper_funcs.py  interpolateFromCAMS.py  interpolateFromMozart.py  main_script_template.sh  make_grdfile.sh  mars_retrieval_GFAS_period.py  prepareFireEmis.py  prepareJprocFiles.py  prepareMEGAN.py  pyproject.toml  runMCIP.py  run_script_template.sh  setupCMAQinputs.py  setup_for_wrf.py  submit_setup.sh  submit_setup_for_wrf.sh  surfzonegeo.py  unit
.github/workflows/: build.yaml
config/cmaq/: config.docker.full.json  config.docker.json  config.nci.json
config/wrf/: config.docker.full.json  config.docker.json  config.nci.json
domains/aust-test/: geo_em.d01.nc  namelist.wps  namelist.wrf
notes/: required_software.md
scripts/: check_wrfout_in_background.py  download-geog.sh  download_cams_input.py  run-cmaq.sh  run-wrf.sh  setup_for_cmaq.py  setup_for_wrf.py
speciesTables/: GC_CH4only.nml  species_table_CAMCHEM_CBM05.txt  species_table_GFAS_CBM05.txt  species_table_MOZART_CBM05.txt  species_table_WACCM.txt  species_table_WRFCHEM_CBM05.txt  species_table_WRFCHEM_RADM2.txt  test.txt  test2.txt
src/setup_runs/: __init__.py  config_cmaq.py  config_read_functions.py  utils.py
templateRunScripts/: PBS_CMAQ_job.sh  SLURM_CMAQ_job.sh  TEMPLATE  a.py  prepmegan4cmaq.inp  run.bcon  run.cctm  run.emproc.v210.csh  run.icon  run.jproc  run.mcip  run.met2mgn.v210.csh  run.mgn2mech.v210.csh  run.txt2ioapi.v210.csh  setcase.csh
tests/: conftest.py  test_read_config.py  test_setup_for_wrf.py
(+33 files in other folders)
