[tool.poetry]
name = "setup_runs"
version = "0.1.0"
description = "Scripts for running WRF "
authors = [
    "Peter Rayner <peter.rayner@superpowerinstitute.com.au>",
    "Jeremy Silver",
    "Jared Lewis <jared.lewis@climate-resource.com>"
]
readme = "README.md"
packages = [
    {include = "setup_runs", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
pytz = "*"
f90nml = "*"
netCDF4 = "*"
requests = "*"
joblib = "^1.4.2"
tqdm = "^4.66.4"
cdsapi = "^0.7.0"
click = "^8.1.7"
ruff = "^0.4.8"

[tool.poetry.group.tests.dependencies]
pytest = "^8.2.1"
pytest-regressions = "^2.5.0"
xarray = "^2024.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"